# claude-loop-runner

./: Cargo.toml  README.md  create_release.sh
.github/workflows/: release.yml
claude-loop-tasks/: state_0.json  task_list.json
src/: claude.rs  cli.rs  config.rs  git.rs  main.rs  memory.rs  process.rs  runner.rs  state.rs  task_list.rs  types.rs  usage.rs
src/pools/: mod.rs  prompt.rs  verify.rs
