[package]
name = "claude-loop-runner"
version = "0.1.6"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-channel = "2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
sysinfo = "0.30"
